--- a/Index.html
+++ b/Index.html
@@ -22,35 +22,35 @@
                     <span class="Menu__Button ">Menu</span>
                     <div class="Menu__Celular__Desplegado">
                         <div class="Menu__Celular__Estilo" >
-                            <a href="./Menu/Exchange.html" class="Menu__Desplegado__Estilo">Exchange</a>
+                            <a href="./menu/exchange.html" class="Menu__Desplegado__Estilo">Exchange</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Menu/Liquidity.html" class="Menu__Desplegado__Estilo">Liquidity</a>
+                            <a href="./menu/liquidity.html" class="Menu__Desplegado__Estilo">Liquidity</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Menu/Farms.html" class="Menu__Desplegado__Estilo">Farms</a>
+                            <a href="./menu/farms.html" class="Menu__Desplegado__Estilo">Farms</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Menu/Pool.html" class="Menu__Desplegado__Estilo">Pools</a>
+                            <a href="./menu/pool.html" class="Menu__Desplegado__Estilo">Pools</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Menu/NFT.html" class="Menu__Desplegado__Estilo">NFT</a>
+                            <a href="./menu/nft.html" class="Menu__Desplegado__Estilo">NFT</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Menu/Info.html" class="Menu__Desplegado__Estilo">Info</a>
+                            <a href="./menu/info.html" class="Menu__Desplegado__Estilo">Info</a>
                         </div>
 
                     </div>
                 </div>
-                <a href="./Index.html" class="Menu "><img class="Menu__Logo" src="./imagenes/PokeDEX.png" alt=""></a>
+                <a href="./index.html" class="Menu "><img class="Menu__Logo" src="./imagenes/PokeDEX.png" alt=""></a>
                 <div class="Menu__Desplegable ">
                     <span class="Menu Menu__Button">Trade</span>
                     <div class="Menu__Desplegado">
                         <div class="Menu__Desplegado__Link">
-                            <a href="./Menu/Exchange.html" class="Menu__Desplegado__Estilo" >Exchange</a>
+                            <a href="./menu/exchange.html" class="Menu__Desplegado__Estilo" >Exchange</a>
                         </div>
                         <div class="Menu__Desplegado__Link">
-                            <a href="./Menu/Liquidity.html" class="Menu__Desplegado__Estilo" >Liquidity</a>
+                            <a href="./menu/liquidity.html" class="Menu__Desplegado__Estilo" >Liquidity</a>
                         </div>
                     </div>
                 </div>
@@ -58,15 +58,15 @@
                     <span class="Menu Menu__Button">Earn</span>
                     <div class="Menu__Desplegado">
                         <div class="Menu__Desplegado__Link">
-                            <a href="./Menu/Farms.html" class="Menu__Desplegado__Estilo" >Farm</a>
+                            <a href="./menu/farms.html" class="Menu__Desplegado__Estilo" >Farm</a>
                         </div>
                         <div class="Menu__Desplegado__Link">
-                            <a href="./Menu/Pool.html" class="Menu__Desplegado__Estilo" >Pool</a>
+                            <a href="./menu/pool.html" class="Menu__Desplegado__Estilo" >Pool</a>
                         </div>
                     </div>
                 </div>
-                <a href="./NFT.html" class="Menu Menu__Button Menu__Celular">NFT</a>
-                <a href="./Info.html" class="Menu Menu__Button Menu__Celular">Info</a>
+                <a href="./menu/nft.html" class="Menu Menu__Button Menu__Celular">NFT</a>
+                <a href="./menu/info.html" class="Menu Menu__Button Menu__Celular">Info</a>
             </div>
             <div class="Menu__Wallet">
                 <a href="" class="Menu  Menu__Button">Wallet</a>
