--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="../Css/Style.css">
     <link href="http://fonts.cdnfonts.com/css/digital-numbers" rel="stylesheet">
+    <link rel="stylesheet" href="../css2/all.min.css">
 </head>
 <body>
     <header>
-        <h1> prueba </h1>
         <nav class="Menu Menu__Completo">
             <div class="Menu__Principal">
                 <div class=" Menu__Para__Celular Menu__Celular__Desplegable">
@@ -34,7 +34,6 @@
                         <div class="Menu__Celular__Estilo">
                             <a href="./Info.html" class="Menu__Desplegado__Estilo">Info</a>
                         </div>
-
                     </div>
                 </div>
                 <a href="../Index.html" class="Menu "><img class="Menu__Logo" src="../imagenes/PokeDEX.png" alt=""></a>
@@ -75,42 +74,24 @@
             </span>
         </h2>
     </header>
-    <br>
-    <article>
-        <div class="ContainerSwap">
-            <div class="ContainerSwapTitulo Swap">
-                <h3 class="Swap">Swap</h3>
-                <div class="Swap">Trade Tokens in an instant</div>
+    <section class="Swap__Container">
+            <div class="Swap__Titulo">
+                <h1>Swap</h1>
             </div>
-            <form action="" class="Swap SwapForm">
-                <div class="Swap SwapToken">
-                    <div class="Swap SwapFrom">From</div>
-                    <input type="text" value="0.0" class="Swap SwapToken SwapCantidad">
-                    <select name="" id="" class="Swap SwapToken">
-                        <option value="PDEX">PDEX</option>
-                        <option value="USDT">USDT</option>
-                        <option value="BNB">BNB</option>
-                        <option value="BUSD">BUSD</option>
-                        <option value="Weth">ETH</option>
-                    </select>
-                </div>
-                <div class="Swap SwapToken">
-                    <div class="Swap SwapFrom">From</div>
-                    <input type="text" value="0.0" class="Swap SwapToken SwapCantidad">
-                    <select name="" id="" class="Swap SwapToken">
-                        <option value="PDEX">PDEX</option>
-                        <option value="USDT">USDT</option>
-                        <option value="BNB">BNB</option>
-                        <option value="BUSD">BUSD</option>
-                        <option value="Weth">ETH</option>
-                    </select>
-                </div>
-                <div class="Swap SwapForm">
-                    <input type="submit" name="" id="" value="Swap" class="SwapButtom">
-                </div>
-            </form>
-        </div>
-    </article>
+            <div>
+                <div>opcion de moneda</div>
+                <div>balance</div>
+                <div>ingresar cantidad</div>
+            </div>
+            <div>
+                <div>opcion de moneda</div>
+                <div>balance</div>
+                <div>ingresar cantidad</div>
+            </div>   
+            <div>
+                <button>Swap</button>
+            </div>         
+    </section>
     <article class="Pika_Elegante">
         <img src="../imagenes/Pikachu L-Gante.jpg" alt="" class="PikaL_Gante">
         <img src="../imagenes/Pikachu R-Gante.jpg" alt="" class="PikaL_Gante">
