Nuevo diseño de Swap empezado

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -74,9 +74,21 @@
             </span>
         </h2>
     </header>
+    <h1 style="text-align: center;">swap</h1>
     <section class="Swap__Container">
-            <div class="Swap__Titulo">
-                <h1>Swap</h1>
+            <div class="Swap__Titulo__Completo">
+                <div class="Swap__Titulo">
+                    <div class="Swap__Titulo__Grafica">
+                        <button class="Swap__Icono"><i class="fa-solid fa-chart-column"></i></i></button>
+                    </div>
+                    <h1 class="Swap__Titulo__Swap">Swap </h1>
+                    <div class="Swap__Titulo__Ajustes">
+                        <button class="Swap__Icono"><i class="fa-solid fa-sun"></i></button>
+                        <button class="Swap__Icono"><i class="fa-solid fa-clock-rotate-left"></i></button>
+                        <button class="Swap__Icono"><i class="fa-solid fa-arrow-rotate-right"></i></button>
+                    </div>
+                </div>
+                <div class="Swap__TradeFor">Trade for token an instant</div>
             </div>
             <div>
                 <div>opcion de moneda</div>
