SWap completo sin Fontsize

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -74,7 +74,6 @@
             </span>
         </h2>
     </header>
-    <h1 style="text-align: center;">swap</h1>
     <section class="Swap__Container">
             <div class="Swap__Titulo__Completo">
                 <div class="Swap__Titulo">
@@ -90,19 +89,53 @@
                 </div>
                 <div class="Swap__TradeFor">Trade for token an instant</div>
             </div>
-            <div>
-                <div>opcion de moneda</div>
-                <div>balance</div>
-                <div>ingresar cantidad</div>
+            <div class="Swap__Container__Option">
+                <div class="Swap__Option">
+                    <div>
+                        <select name="" id="">
+                            <option value="">BNB</option>
+                            <option value="">ETH</option>
+                        </select>
+                    </div>
+                    <div>Balance:0.000</div>
+                </div>
+                <div class="Swap__Container__Amount">
+                    <div class="Swap__Max">
+                        <input type="text" value="0.00" class="Swap__Amount__0">
+                    </div>
+                    <div class="Swap__Max">
+                        <span class="Swap__Max__Estilo">MAX</span>
+                    </div>
+                </div>
+                <div class="Swap__Button" >
+                    <button class="Swap__Button__Arrow"><i class="fa-solid fa-circle-arrow-down"></i></button>
+                </div>
+                <div class="Swap__Option">
+                    <div>
+                        <select name="" id="">
+                            <option value="">BNB</option>
+                            <option value="">ETH</option>
+                        </select>
+                    </div>
+                    <div>Balance:0.000</div>
+                </div>
+                <div class="Swap__Container__Amount">
+                    <div class="Swap__Max">
+                        <input type="text" value="0.00" class="Swap__Amount__0">
+                    </div>
+                    <div class="Swap__Max">
+                        <span class="Swap__Max__Estilo">MAX</span>
+                    </div>
+                </div>
+                <div class="Swap__Container__Sli">
+                    <div>Slippage Tolerance</div>
+                    <div>11%</div>
+                </div> 
+                <div >
+                    <button class="Swap__Button__Swap">Swap</button>
+                </div>   
             </div>
-            <div>
-                <div>opcion de moneda</div>
-                <div>balance</div>
-                <div>ingresar cantidad</div>
-            </div>   
-            <div>
-                <button>Swap</button>
-            </div>         
+      
     </section>
     <article class="Pika_Elegante">
         <img src="../imagenes/Pikachu L-Gante.jpg" alt="" class="PikaL_Gante">
