--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../Css/Style.css">
     <link href="http://fonts.cdnfonts.com/css/digital-numbers" rel="stylesheet">
     <link rel="stylesheet" href="../css2/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <header>
