nuevo html de nft

--- a/Menu/NFT.html
+++ b/Menu/NFT.html
@@ -66,42 +66,164 @@
                 <a href="" class="Menu  Menu__Button">Wallet</a>
             </div>
         </nav>
-        <br>
+        <br><br><br><br>
     </header>
-    <section class="MenuNFT">
-        <div class="MenuNFTDiv">
-            <a href="./NFT copy 1.html">
-                <img src="../imagenes/Nfts/Blue.jpg" alt="" class="NFT">
-            </a>
-            <a href="./NFT copy 2.html">
-                <img src="../imagenes/Nfts/Red.jpg" alt="" class="NFT">
-            </a>
-            <a href="./NFT copy 3.html">
-                <img src="../imagenes/Nfts/Yellow.jpg" alt="" class="NFT">
-            </a>
-        </div>
-        <div class="MenuNFTDiv">
-            <a href="./NFT copy 4.html">
-                <img src="../imagenes/Nfts/Gold.jpg" alt="" class="NFT">
-            </a>
-            <a href="./NFT copy 5.html">
-                <img src="../imagenes/Nfts/Silver.jpg" alt="" class="NFT">
-            </a>
-            <a href="./NFT copy 6.html">
-                <img src="../imagenes/Nfts/Crystal.jpg" alt="" class="NFT">
-            </a>
-        </div>
-        <div class="MenuNFTDiv">
-            <a href="./NFT copy 7.html">
-                <img src="../imagenes/Nfts/Zafiro.jpg" alt="" class="NFT">
-            </a>
-            <a href="./NFT copy 8.html">
-                <img src="../imagenes/Nfts/Rubi.jpg" alt="" class="NFT">
-            </a>
-            <a href="./NFT copy 9.html">
-                <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT">
-            </a>
-        </div>
+    <section class="NFT__Container__Background">
+        <h1>NFT Market</h1>
+        <h3>Soy un subtitulo</h3>
+        <button>Manage/Sell</button>
+    </section>
+    <section class="NFT__Container">
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </section>
+    <br>
+    <section class="NFT__Container">
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </section>
+    <br>
+    <section class="NFT__Container">
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="NFT__Container__Collections">
+            <div class="NFT__Container__Fondo__Collection">
+                <img src="../imagenes/fondo__bicicleta.jpg" alt="" class="NFT__Fondo__Collection">
+            </div>
+            <div class="NFT__Container__Collections__Sub">
+                <div>
+                    <img src="../imagenes/Nfts/Emerald.jpg" alt="" class="NFT__Icono">
+                </div>
+                <div class="NFT__Container_Collections__Text">
+                    <div class="NFT__COllections__Estilo">
+                        <div>pokemon Advance</div>
+                        <div>volume 80,0000</div>
+                    </div>
+                </div>
+            </div>
+        </article>
     </section>
 </body>
 </html>
