Nav desplegable al 85%

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -14,65 +14,44 @@
 </head>
 <body>
     <header>
-        <nav class="Menu Menu__Completo">
-            <div class="Menu__Principal">
-                <div class=" Menu__Para__Celular Menu__Celular__Desplegable">
-                    <span class="Menu__Button ">Menu</span>
-                    <div class="Menu__Celular__Desplegado">
-                        <div class="Menu__Celular__Estilo" >
-                            <a href="./Exchange.html" class="Menu__Desplegado__Estilo">Exchange</a>
+        <nav>
+            <section class="Menu__Container">
+                <article>
+                    <input type="checkbox" class="checkbox" id="check">
+                    <label for="check" class="Dromsi">
+                        <div class="Menu__Left__Absolute">
+                            <a href="./Exchange.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Exchange</i></a>
+                            <a href="./farms.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Farms</i></a>
+                            <a href="./pool.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Pools</i></a>
+                            <a href="./nft.html" class="Menu__Left__Estilo2 Menu__Left__Animation">NFT</i></a>
+                            <a href="./info.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Info</i></a>
                         </div>
-                        <div class="Menu__Celular__Estilo">
-                            <a href="./Liquidity.html" class="Menu__Desplegado__Estilo">Liquidity</a>
-                        </div>
-                        <div class="Menu__Celular__Estilo">
-                            <a href="./Farms.html" class="Menu__Desplegado__Estilo">Farms</a>
-                        </div>
-                        <div class="Menu__Celular__Estilo">
-                            <a href="./Pool.html" class="Menu__Desplegado__Estilo">Pools</a>
-                        </div>
-                        <div class="Menu__Celular__Estilo">
-                            <a href="./NFT.html" class="Menu__Desplegado__Estilo">NFT</a>
-                        </div>
-                        <div class="Menu__Celular__Estilo">
-                            <a href="./Info.html" class="Menu__Desplegado__Estilo">Info</a>
-                        </div>
+                    </label>    
+                        <a href="" ><img src="../imagenes/PokeDEX.png" alt="" class="Menu__Logo" style="margin-left: 40px;" ></a>
+                        <button class="Menu__Icono"><i class="fa-brands fa-telegram "></i></button>
+                        <button class="Menu__Icono"><i class="fa-brands fa-twitter "></i></button>
+                        <button class="Menu__Icono"><i class="fa-brands fa-medium "></i></button>
+                </article>
+                <article class="Menu__Container__Nav">
+                    <div class="Menu__Container__Rigth">
+                        <div><button class="Menu__Icono"><i class="fa-solid fa-gear"></i></button></div>
+                        <button class="Menu__Button__Wallet">Connet Wallet</button>
                     </div>
-                </div>
-                <a href="../Index.html" class="Menu "><img class="Menu__Logo" src="../imagenes/PokeDEX.png" alt=""></a>
-                <div class="Menu__Desplegable ">
-                    <span class="Menu Menu__Button">Trade</span>
-                    <div class="Menu__Desplegado">
-                        <div class="Menu__Desplegado__Link">
-                            <a href="./Exchange.html" class="Menu__Desplegado__Estilo" >Exchange</a>
-                        </div>
-                        <div class="Menu__Desplegado__Link">
-                            <a href="./Liquidity.html" class="Menu__Desplegado__Estilo" >Liquidity</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="Menu__Desplegable">
-                    <span class="Menu Menu__Button">Earn</span>
-                    <div class="Menu__Desplegado">
-                        <div class="Menu__Desplegado__Link">
-                            <a href="./Farms.html" class="Menu__Desplegado__Estilo" >Farm</a>
-                        </div>
-                        <div class="Menu__Desplegado__Link">
-                            <a href="./Pool.html" class="Menu__Desplegado__Estilo" >Pool</a>
-                        </div>
-                    </div>
-                </div>
-                <a href="./NFT.html" class="Menu Menu__Button Menu__Celular">NFT</a>
-                <a href="./Info.html" class="Menu Menu__Button Menu__Celular">Info</a>
-            </div>
-            <div class="Menu__Wallet">
-                <a href="" class="Menu  Menu__Button">Wallet</a>
-            </div>
+                </article>
+            </section>
         </nav>
-        <br><br><br>
-
     </header>
-    <section class="Swap__Container">
+    <section class="Display" >
+        <article >
+            <div class="Menu__Left">
+                <a href="./Exchange.html" class="Menu__Left__Estilo Menu__Left__Animation Menu__Left__Switch__On"><i class="fa-solid fa-right-left Menu__Left__Icono"></i></a>
+                <a href="./farms.html" class="Menu__Left__Estilo Menu__Left__Animation"><i class="fa-solid fa-tractor Menu__Left__Icono"></i></a>
+                <a href="./liquidity.html" class="Menu__Left__Estilo Menu__Left__Animation"><i class="fa-solid fa-water-ladder Menu__Left__Icono"></i></a>
+                <a href="./nft.html" class="Menu__Left__Estilo Menu__Left__Animation"><i class="fa-solid fa-images Menu__Left__Icono"></i></a>
+                <a href="./info.html" class="Menu__Left__Estilo Menu__Left__Animation"><i class="fa-solid fa-circle-info Menu__Left__Icono"></i></a>
+            </div>
+        </article>
+        <article class="Swap__Container">
             <div class="Swap__Titulo__Completo">
                 <div class="Swap__Titulo">
                     <div class="Swap__Titulo__Grafica">
@@ -80,7 +59,7 @@
                     </div>
                     <h1 class="Swap__Titulo__Swap">Swap </h1>
                     <div class="Swap__Titulo__Ajustes">
-                        <button class="Swap__Icono"><i class="fa-solid fa-sun"></i></button>
+                        <button class="Swap__Icono"><i class="fa-solid fa-gear"></i></button>
                         <button class="Swap__Icono"><i class="fa-solid fa-clock-rotate-left"></i></button>
                         <button class="Swap__Icono"><i class="fa-solid fa-arrow-rotate-right"></i></button>
                     </div>
@@ -133,13 +112,9 @@
                     <button class="Swap__Button__Swap">Swap</button>
                 </div>   
             </div>
+        </article>
       
     </section>
-    <article class="Pika_Elegante">
-        <img src="../imagenes/Pikachu L-Gante.jpg" alt="" class="PikaL_Gante">
-        <img src="../imagenes/Pikachu R-Gante.jpg" alt="" class="PikaL_Gante">
-
-    </article>
     <footer class="Footer__Fondo">
         <div class="Footer__Social">
         <div >
