nuevo menu termina en exchange

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -17,8 +17,9 @@
         <nav>
             <section class="Menu__Container">
                 <article>
-                    <input type="checkbox" class="checkbox" id="check">
+                    <input type="checkbox" checked="checked" class="checkbox" id="check">
                     <label for="check" class="Dromsi">
+                        <div class="Sub__Menu__Button"><i class="fa-solid fa-align-justify"></i></div>
                         <div class="Menu__Left__Absolute">
                             <a href="./Exchange.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Exchange</i></a>
                             <a href="./farms.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Farms</i></a>
