commit prueba cambio de mayusculas

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/Style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="http://fonts.cdnfonts.com/css/digital-numbers" rel="stylesheet">
     <link rel="stylesheet" href="../css2/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
         <nav>
             <section class="Menu__Container">
                 <article>
-                    <input type="checkbox" checked="checked" class="checkbox" id="check">
+                    <input type="checkbox" class="checkbox" id="check">
                     <label for="check" class="Dromsi">
                         <div class="Sub__Menu__Button"><i class="fa-solid fa-align-justify"></i></div>
                         <div class="Menu__Left__Absolute">
