commit final para entregar

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -21,7 +21,7 @@
                     <label for="check" class="Dromsi">
                         <div class="Sub__Menu__Button"><i class="fa-solid fa-align-justify"></i></div>
                         <div class="Menu__Left__Absolute">
-                            <a href="./Exchange.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Exchange</i></a>
+                            <a href="./exchange.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Exchange</i></a>
                             <a href="./farms.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Farms</i></a>
                             <a href="./pool.html" class="Menu__Left__Estilo2 Menu__Left__Animation">Pools</i></a>
                             <a href="./nft.html" class="Menu__Left__Estilo2 Menu__Left__Animation">NFT</i></a>
@@ -45,7 +45,7 @@
     <section class="Display" >
         <article >
             <div class="Menu__Left">
-                <a href="./Exchange.html" class="Menu__Left__Estilo Menu__Left__Animation Menu__Left__Switch__On"><i class="fa-solid fa-right-left Menu__Left__Icono"></i></a>
+                <a href="./exchange.html" class="Menu__Left__Estilo Menu__Left__Animation Menu__Left__Switch__On"><i class="fa-solid fa-right-left Menu__Left__Icono"></i></a>
                 <a href="./farms.html" class="Menu__Left__Estilo Menu__Left__Animation"><i class="fa-solid fa-tractor Menu__Left__Icono"></i></a>
                 <a href="./liquidity.html" class="Menu__Left__Estilo Menu__Left__Animation"><i class="fa-solid fa-water-ladder Menu__Left__Icono"></i></a>
                 <a href="./nft.html" class="Menu__Left__Estilo Menu__Left__Animation"><i class="fa-solid fa-images Menu__Left__Icono"></i></a>
