--- a/Menu/Farms.html
+++ b/Menu/Farms.html
@@ -16,35 +16,35 @@
                     <span class="Menu__Button ">Menu</span>
                     <div class="Menu__Celular__Desplegado">
                         <div class="Menu__Celular__Estilo" >
-                            <a href="./Exchange.html" class="Menu__Desplegado__Estilo">Exchange</a>
+                            <a href="./exchange.html" class="Menu__Desplegado__Estilo">Exchange</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Liquidity.html" class="Menu__Desplegado__Estilo">Liquidity</a>
+                            <a href="./liquidity.html" class="Menu__Desplegado__Estilo">Liquidity</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Farms.html" class="Menu__Desplegado__Estilo">Farms</a>
+                            <a href="./farms.html" class="Menu__Desplegado__Estilo">Farms</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Pool.html" class="Menu__Desplegado__Estilo">Pools</a>
+                            <a href="./pool.html" class="Menu__Desplegado__Estilo">Pools</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./NFT.html" class="Menu__Desplegado__Estilo">NFT</a>
+                            <a href="./nft.html" class="Menu__Desplegado__Estilo">NFT</a>
                         </div>
                         <div class="Menu__Celular__Estilo">
-                            <a href="./Info.html" class="Menu__Desplegado__Estilo">Info</a>
+                            <a href="./info.html" class="Menu__Desplegado__Estilo">Info</a>
                         </div>
 
                     </div>
                 </div>
-                <a href="../Index.html" class="Menu "><img class="Menu__Logo" src="../imagenes/PokeDEX.png" alt=""></a>
+                <a href="../index.html" class="Menu "><img class="Menu__Logo" src="../imagenes/PokeDEX.png" alt=""></a>
                 <div class="Menu__Desplegable ">
                     <span class="Menu Menu__Button">Trade</span>
                     <div class="Menu__Desplegado">
                         <div class="Menu__Desplegado__Link">
-                            <a href="./Exchange.html" class="Menu__Desplegado__Estilo" >Exchange</a>
+                            <a href="./exchange.html" class="Menu__Desplegado__Estilo" >Exchange</a>
                         </div>
                         <div class="Menu__Desplegado__Link">
-                            <a href="./Liquidity.html" class="Menu__Desplegado__Estilo" >Liquidity</a>
+                            <a href="./liquidity.html" class="Menu__Desplegado__Estilo" >Liquidity</a>
                         </div>
                     </div>
                 </div>
@@ -52,15 +52,15 @@
                     <span class="Menu Menu__Button">Earn</span>
                     <div class="Menu__Desplegado">
                         <div class="Menu__Desplegado__Link">
-                            <a href="./Farms.html" class="Menu__Desplegado__Estilo" >Farm</a>
+                            <a href="./farms.html" class="Menu__Desplegado__Estilo" >Farm</a>
                         </div>
                         <div class="Menu__Desplegado__Link">
-                            <a href="./Pool.html" class="Menu__Desplegado__Estilo" >Pool</a>
+                            <a href="./pool.html" class="Menu__Desplegado__Estilo" >Pool</a>
                         </div>
                     </div>
                 </div>
-                <a href="./NFT.html" class="Menu Menu__Button Menu__Celular">NFT</a>
-                <a href="./Info.html" class="Menu Menu__Button Menu__Celular">Info</a>
+                <a href="./nft.html" class="Menu Menu__Button Menu__Celular">NFT</a>
+                <a href="./info.html" class="Menu Menu__Button Menu__Celular">Info</a>
             </div>
             <div class="Menu__Wallet">
                 <a href="" class="Menu  Menu__Button">Wallet</a>
@@ -69,8 +69,8 @@
         <br><br><br>
         <h2 class="SubMenu">
             <span class="SubMenuSombra" >
-                <a href="./Farms.html" class="SubMenuOn">Farm</a>
-                <a href="./Pool.html" class="SubMenuOff">Pool</a>
+                <a href="./farms.html" class="SubMenuOn">Farm</a>
+                <a href="./pool.html" class="SubMenuOff">Pool</a>
             </span>
         </h2>
     </header>
@@ -78,7 +78,7 @@
     <article class="EncabezadoFarms" >
         <h1 >Famrs</h1>
         <h2>Stake to LP tokens to earn</h2>
-        <div><a href="./Info.html">info</a></div>        
+        <div><a href="./info.html">info</a></div>        
     </article>
     <section class="Farm__Container">
         <article class="ArticleFarm">
