--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css2/all.min.css">
         <title>PokéDEX</title>
     </head>
 <body>
@@ -24,8 +25,8 @@
                             Trade
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="./menu/exchange.html" class="dropdown-item">exchange</a></li>
-                            <li><a href="./menu/liquidity.html" class="dropdown-item">Liquidity</a></li>
+                            <li><a href="./exchange.html" class="dropdown-item">exchange</a></li>
+                            <li><a href="./Liquidity.html" class="dropdown-item">Liquidity</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown me-2">
@@ -49,6 +50,19 @@
                 </button>
         </div>
     </nav>
+    <section>
+
+        <div>
+            <button></button>
+            <h2>Swap</h2>
+            <div>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+
+    </section>
     <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
