Agrego css comun

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css2/all.min.css">
+        <link rel="stylesheet" href="../css/Styles.css">
         <title>PokéDEX</title>
     </head>
 <body>
@@ -50,19 +51,7 @@
                 </button>
         </div>
     </nav>
-    <section>
-
-        <div>
-            <button></button>
-            <h2>Swap</h2>
-            <div>
-                <button></button>
-                <button></button>
-                <button></button>
-            </div>
-        </div>
-
-    </section>
+    
     <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
