--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -10,7 +10,7 @@
         <title>PokéDEX</title>
     </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-3 border-bottom border-danger ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-3 border-bottom border-danger fixed-top">
         <div class="container-fluid">
             <div>
                 <button type="button" class="navbar-toggler me-3" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
@@ -51,7 +51,87 @@
                 </button>
         </div>
     </nav>
-    
+    <section class="Display" >
+        <article class="Swap__Container">
+            <div class="Swap__Titulo__Completo">
+                <div class="Swap__Titulo">
+                    <div class="Swap__Titulo__Grafica">
+                        <button class="Swap__Icono"><i class="fa-solid fa-chart-column"></i></i></button>
+                    </div>
+                    <h1 class="Swap__Titulo__Swap">Swap </h1>
+                    <div class="Swap__Titulo__Ajustes">
+                        <button class="Swap__Icono"><i class="fa-solid fa-gear"></i></button>
+                        <button class="Swap__Icono"><i class="fa-solid fa-clock-rotate-left"></i></button>
+                        <button class="Swap__Icono"><i class="fa-solid fa-arrow-rotate-right"></i></button>
+                    </div>
+                </div>
+                <div class="Swap__TradeFor">Trade for token an instant</div>
+            </div>
+            <div class="Swap__Container__Option">
+                <div class="Swap__Option">
+                    <div>
+                        <select name="" id="">
+                            <option value="">BNB</option>
+                            <option value="">ETH</option>
+                        </select>
+                    </div>
+                    <div>Balance:0.000</div>
+                </div>
+                <div class="Swap__Container__Amount">
+                    <div class="Swap__Max">
+                        <input type="text" value="0.00" class="Swap__Amount__0">
+                    </div>
+                    <div class="Swap__Max">
+                        <span class="Swap__Max__Estilo">MAX</span>
+                    </div>
+                </div>
+                <div class="Swap__Button" >
+                    <button class="Swap__Button__Arrow"><i class="fa-solid fa-circle-arrow-down"></i></button>
+                </div>
+                <div class="Swap__Option">
+                    <div>
+                        <select name="" id="">
+                            <option value="">BNB</option>
+                            <option value="">ETH</option>
+                        </select>
+                    </div>
+                    <div>Balance:0.000</div>
+                </div>
+                <div class="Swap__Container__Amount">
+                    <div class="Swap__Max">
+                        <input type="text" value="0.00" class="Swap__Amount__0">
+                    </div>
+                    <div class="Swap__Max">
+                        <span class="Swap__Max__Estilo">MAX</span>
+                    </div>
+                </div>
+                <div class="Swap__Container__Sli">
+                    <div>Slippage Tolerance</div>
+                    <div>11%</div>
+                </div> 
+                <div >
+                    <button class="btn btn-danger" style="width: 100%;">Swap</button>
+                </div>   
+            </div>
+        </article>
+    </section>
+
+    <footer class="p-3 mb-2 bg-danger bg-gradient text-white border-3 border-top border-danger  py-4 text-center row">
+                <a href="../index.html" class="col-3" ><img src="../imagenes/PokeDEX.png" alt="" style=" width: 150px;"></a>
+                <div class="col">
+                    <h3>Strategic Partner</h3>
+                    <img src="../imagenes/CoderHouse.png" alt="" style=" width: 200px;" class="rounded-pill">
+                </div>
+                <div class="col-3">
+                    <h3>Social</h3>
+                    <div class="">
+                        <i class="fa-brands fa-twitter"></i>    
+                        <i class="fa-brands fa-telegram"></i>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </div>
+
+    </footer>
     <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
