Bootstrap index, exchange, liquidity

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -16,7 +16,7 @@
                 <button type="button" class="navbar-toggler me-3" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a href="./index.html" class="navbar-brand me-5">PokéDEX</a>
+                <a href="../index.html" class="navbar-brand me-5">PokéDEX</a>
 
             </div>
             <div id="MenuNavegacion" class="collapse navbar-collapse">
@@ -58,7 +58,7 @@
                     <div class="Swap__Titulo__Grafica">
                         <button class="Swap__Icono"><i class="fa-solid fa-chart-column"></i></i></button>
                     </div>
-                    <h1 class="Swap__Titulo__Swap">Swap </h1>
+                    <h3 class="Swap__Titulo__Swap">Swap </h3>
                     <div class="Swap__Titulo__Ajustes">
                         <button class="Swap__Icono"><i class="fa-solid fa-gear"></i></button>
                         <button class="Swap__Icono"><i class="fa-solid fa-clock-rotate-left"></i></button>
