--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
                     </button>
             </div>
         </nav>
-        <section class="Carrusel1">
+        <section>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -83,7 +83,7 @@
                   <div class="carousel-item">
                     <img src="./imagenes/animado.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
+                      <h1>NFT Market</h1>
                       <p>Some representative placeholder content for the third slide.</p>
                     </div>
                   </div>
