Bootstrap index, echange, liquidty, nft completo

--- a/Menu/Exchange.html
+++ b/Menu/Exchange.html
@@ -35,12 +35,12 @@
                             Earn
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="./menu/farms.html" class="dropdown-item">Farm</a></li>
-                            <li><a href="./menu/pool.html" class="dropdown-item">Pool</a></li>
+                            <li><a href="./Farms.html" class="dropdown-item">Farm</a></li>
+                            <li><a href="./Pool.html" class="dropdown-item">Pool</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item me-2"><a class="nav-link" href="./menu/nft.html">NFT</a></li>
-                    <li class="nav-item me-2"><a class="nav-link" href="./menu/info.html">Info</a></li>
+                    <li class="nav-item me-2"><a class="nav-link" href="./nft.html">NFT</a></li>
+                    <li class="nav-item me-2"><a class="nav-link" href="./Info.html">Info</a></li>
                 </ul>
             </div>
                 <button class="btn btn-danger rounded-pill px-3 mb-2 mb-lg-0">
