--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="../css2/all.min.css">
+    <link rel="stylesheet" href="./css/Styles.css">
     <title>PokéDEX</title>
 </head>
 <body >
@@ -70,21 +71,21 @@
                     <img src="./imagenes/iniciales-advance.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h1>Farms & Staking</h1>
-                      <p>Some representative placeholder content for the second slide.</p>
+                      <a href="./menu/Exchange.html" class="link__decoration">Earn</a>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="./imagenes/mivecinogengar.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
+                      <h5>Trade Now</h5>
+                      <a href="./menu/Farms.html" class="link__decoration">Trade</a>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="./imagenes/animado.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h1>NFT Market</h1>
-                      <p>Some representative placeholder content for the third slide.</p>
+                      <p>!Catch them all¡</p>
                     </div>
                   </div>
                 </div>
